# TicTacToeGame

./: .gitignore  CMakeLists.txt  CommandParser.cpp  CommandParser.h  CommunicationTopics.h  Program.cpp  README.md  StandardCommunicationWrapper.cpp  StandardCommunicationWrapper.h  TODO.txt
Board/: Board.cpp  Board.h  Cell.cpp  Cell.h  Stone.cpp  Stone.h
Data/: KeyValue.cpp  KeyValue.h  Setting.cpp  Setting.h  SquareMatrix.h
Enum/: eOuterShape.h  eStartPlayer.h  eStoneColor.h  eSymbol.h  eSymbolColor.h
Game/: GameManager.cpp  GameManager.h  IPlayerLogic.h  Player.cpp  Player.h  RandomLogic.cpp  RandomLogic.h  UserLogic.cpp  UserLogic.h
